# nnue_trainer

./: .gitignore  README.md  analyzer.py  dataset.py  ffi.py  genpos.py  model.py  playground.py  psqts.py  serialize.py  trainer.py
dataloader/: batch.cpp  batch.hpp  batchstream.cpp  batchstream.hpp  bitutil.hpp  common.hpp  compile_flags.txt  entry.hpp  feeder.cpp  feeder.hpp  fen.cpp  fen.hpp  main.cpp  myhash.cpp  myhash.hpp  packer.cpp  packer.hpp  stream.cpp  stream.hpp
nets/: history.txt
satpymod/: CMakeLists.txt  compile_flags.txt  config.hpp  main.cpp  pack.cpp  pack.hpp  pymod.cpp  pymod.hpp
satpymod/board/: board.cpp  board.hpp  parse.cpp
satpymod/dataloader/: batch.cpp  batch.hpp  batchstream.cpp  batchstream.hpp  ftset.hpp  halfkp.cpp  halfkp.hpp  membuf.hpp
satpymod/nnue/: accumulator.hpp  evaluate.cpp  network.hpp  nnarch.hpp  nnue_misc.hpp  nnue_state.hpp  transformer.hpp
trainer/: data_check.ipynb  ffi.py  ftset.py  halfkp.py  model.py  requirements.txt  serialize.ipynb  serialize.py  testnets.ipynb  testnets.py  train.ipynb  train.py  train_ranger.ipynb  transformer.py
trainer/.ipynb_checkpoints/: data_check-checkpoint.ipynb  train-checkpoint.ipynb
trainer/cuda/: .clangd  ftbackward.cu  ftforward.cu  psqt.cu
